# AgentGuard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agentguard/: __init__.py  checker.py  cli.py  report.py  rules.py
examples/: sample_check.py
tests/: __init__.py  test_checker.py  test_report.py  test_rules.py
